test(dialogs): починить navbar contract в DialogsControllerWebMvcTest #ai
- перевести DialogsControllerWebMvcTest на реальный NavigationService и закрепить sidebar contract
- добавить test-runtime mock-maker-subclass для совместимости @MockBean с текущим JDK
- исправить compile blocker в ChannelApiControllerWebMvcTest для целевого прогона тестов