@@ -3,24 +3,29 @@ package com.example.panel.controller;
 import com.example.panel.model.dialog.DialogListItem;
 import com.example.panel.model.dialog.DialogMyDialogs;
 import com.example.panel.model.dialog.DialogSummary;
+import com.example.panel.repository.PanelUserRepository;
 import com.example.panel.service.DialogLookupReadService;
 import com.example.panel.service.NavigationService;
+import com.example.panel.service.PanelUserPhotoService;
+import com.example.panel.service.PermissionService;
 import com.example.panel.service.SharedConfigService;
+import com.example.panel.service.UnblockRequestService;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.context.annotation.Import;
 import org.springframework.test.web.servlet.MockMvc;
 
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.when;
 import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.csrf;
 import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.user;
@@ -32,13 +37,11 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 
 @WebMvcTest(DialogsController.class)
 @AutoConfigureMockMvc(addFilters = false)
+@Import(NavigationService.class)
 class DialogsControllerWebMvcTest {
 
     @Autowired
     private MockMvc mockMvc;
-
-    @MockBean
-    private NavigationService navigationService;
 
     @MockBean
     private DialogLookupReadService dialogLookupReadService;
@@ -46,38 +49,49 @@ class DialogsControllerWebMvcTest {
     @MockBean
     private SharedConfigService sharedConfigService;
 
+    @MockBean
+    private PermissionService permissionService;
+
+    @MockBean
+    private PanelUserRepository panelUserRepository;
+
+    @MockBean
+    private UnblockRequestService unblockRequestService;
+
+    @MockBean
+    private PanelUserPhotoService panelUserPhotoService;
+
     @Test
     void dialogsTicketRouteProvidesInitialDialogTicketId() throws Exception {
-        doNothing().when(navigationService).enrich(any(), any());
-        when(dialogLookupReadService.loadSummary()).thenReturn(new DialogSummary(0, 0, 0, Collections.emptyList()));
-        when(dialogLookupReadService.loadDialogs(anyString())).thenReturn(Collections.emptyList());
-        when(dialogLookupReadService.groupMyActiveDialogs(anyList(), anyString()))
-                .thenReturn(DialogMyDialogs.empty());
-        when(sharedConfigService.loadSettings()).thenReturn(Map.of());
+        stubNavigationDefaults();
+        stubDialogsPageData(new DialogSummary(0, 0, 0, Collections.emptyList()),
+                Collections.emptyList(),
+                DialogMyDialogs.empty());
 
         mockMvc.perform(get("/dialogs/T-123").with(user("operator")))
                 .andExpect(status().isOk())
                 .andExpect(view().name("dialogs/index"))
-                .andExpect(model().attribute("initialDialogTicketId", "T-123"));
+                .andExpect(model().attribute("initialDialogTicketId", "T-123"))
+                .andExpect(content().string(org.hamcrest.Matchers.containsString("data-page-key=\"dialogs\"")))
+                .andExpect(content().string(org.hamcrest.Matchers.containsString("sidebar-user-name")));
     }
 
     @Test
     void dialogsListRendersOpenActionsAsRealDialogLinks() throws Exception {
-        doNothing().when(navigationService).enrich(any(), any());
-        when(dialogLookupReadService.loadSummary()).thenReturn(new DialogSummary(1, 1, 0, Collections.emptyList()));
+        stubNavigationDefaults();
         List<DialogListItem> dialogs = Collections.singletonList(
                 new DialogListItem(
                         "T-555",
                         1001L,
                         2002L,
                         "client",
-                        "Клиент",
+                        "РљР»РёРµРЅС‚",
                         "Billing",
                         7L,
-                        "Поддержка",
-                        "Москва",
-                        "Офис",
-                        "Проблема",
+                        "РџРѕРґРґРµСЂР¶РєР°",
+                        "РњРѕСЃРєРІР°",
+                        "РћС„РёСЃ",
+                        "РџСЂРѕР±Р»РµРјР°",
                         "2026-03-31T09:00:00Z",
                         "open",
                         null,
@@ -93,10 +107,9 @@ class DialogsControllerWebMvcTest {
                         null
                 )
         );
-        when(dialogLookupReadService.loadDialogs(anyString())).thenReturn(dialogs);
-        when(dialogLookupReadService.groupMyActiveDialogs(anyList(), anyString()))
-                .thenReturn(new DialogMyDialogs(dialogs, List.of()));
-        when(sharedConfigService.loadSettings()).thenReturn(Map.of());
+        stubDialogsPageData(new DialogSummary(1, 1, 0, Collections.emptyList()),
+                dialogs,
+                new DialogMyDialogs(dialogs, List.of()));
 
         mockMvc.perform(get("/dialogs").with(user("operator")))
                 .andExpect(status().isOk())
@@ -104,17 +117,16 @@ class DialogsControllerWebMvcTest {
                 .andExpect(model().attributeExists("myUnansweredDialogs"))
                 .andExpect(model().attributeExists("myInWorkDialogs"))
                 .andExpect(content().string(org.hamcrest.Matchers.containsString("id=\"dialogsTable\"")))
-                .andExpect(content().string(org.hamcrest.Matchers.containsString("Действия")));
+                .andExpect(content().string(org.hamcrest.Matchers.containsString("T-555")))
+                .andExpect(content().string(org.hamcrest.Matchers.containsString("data-page-key=\"ai-ops\"")));
     }
 
     @Test
     void dialogsPageIncludesEarlyUiBootstrapScriptsFromSharedHeadFragment() throws Exception {
-        doNothing().when(navigationService).enrich(any(), any());
-        when(dialogLookupReadService.loadSummary()).thenReturn(new DialogSummary(0, 0, 0, Collections.emptyList()));
-        when(dialogLookupReadService.loadDialogs(anyString())).thenReturn(Collections.emptyList());
-        when(dialogLookupReadService.groupMyActiveDialogs(anyList(), anyString()))
-                .thenReturn(DialogMyDialogs.empty());
-        when(sharedConfigService.loadSettings()).thenReturn(Map.of());
+        stubNavigationDefaults();
+        stubDialogsPageData(new DialogSummary(0, 0, 0, Collections.emptyList()),
+                Collections.emptyList(),
+                DialogMyDialogs.empty());
 
         mockMvc.perform(get("/dialogs").with(user("operator")))
                 .andExpect(status().isOk())
@@ -125,7 +137,7 @@ class DialogsControllerWebMvcTest {
 
     @Test
     void aiOpsPageIncludesUiHeadBootstrapAndExplicitPagePreset() throws Exception {
-        doNothing().when(navigationService).enrich(any(), any());
+        stubNavigationDefaults();
 
         mockMvc.perform(get("/ai-ops")
                         .with(user("operator").authorities(() -> "PAGE_DIALOGS"))
@@ -135,6 +147,66 @@ class DialogsControllerWebMvcTest {
                 .andExpect(content().string(org.hamcrest.Matchers.containsString("/js/ui-preferences.js")))
                 .andExpect(content().string(org.hamcrest.Matchers.containsString("/js/theme.js")))
                 .andExpect(content().string(org.hamcrest.Matchers.containsString("/js/ui-config.js")))
-                .andExpect(content().string(org.hamcrest.Matchers.containsString("data-ui-page=\"ai-ops\"")));
+                .andExpect(content().string(org.hamcrest.Matchers.containsString("data-ui-page=\"ai-ops\"")))
+                .andExpect(content().string(org.hamcrest.Matchers.containsString("data-page-key=\"dialogs\"")))
+                .andExpect(content().string(org.hamcrest.Matchers.containsString("data-page-key=\"ai-ops\"")));
+    }
+
+    @Test
+    void dialogsPageRendersChannelsSidebarLinkFromNavigationPermissions() throws Exception {
+        stubNavigationDefaults();
+        when(permissionService.hasAuthority(any(), anyString())).thenAnswer(invocation -> {
+            String authority = invocation.getArgument(1, String.class);
+            return "PAGE_DIALOGS".equals(authority) || "PAGE_CHANNELS".equals(authority);
+        });
+        stubDialogsPageData(new DialogSummary(0, 0, 0, Collections.emptyList()),
+                Collections.emptyList(),
+                DialogMyDialogs.empty());
+
+        mockMvc.perform(get("/dialogs")
+                        .with(user("operator").authorities(() -> "PAGE_DIALOGS", () -> "PAGE_CHANNELS")))
+                .andExpect(status().isOk())
+                .andExpect(content().string(org.hamcrest.Matchers.containsString("data-page-key=\"channels\"")));
+    }
+
+    @Test
+    void dialogsPagePrefersSettingsSidebarLinkOverChannelsWhenSettingsAreAvailable() throws Exception {
+        stubNavigationDefaults();
+        when(permissionService.hasAuthority(any(), anyString())).thenAnswer(invocation -> {
+            String authority = invocation.getArgument(1, String.class);
+            return "PAGE_DIALOGS".equals(authority)
+                    || "PAGE_CHANNELS".equals(authority)
+                    || "PAGE_SETTINGS".equals(authority);
+        });
+        stubDialogsPageData(new DialogSummary(0, 0, 0, Collections.emptyList()),
+                Collections.emptyList(),
+                DialogMyDialogs.empty());
+
+        mockMvc.perform(get("/dialogs")
+                        .with(user("operator").authorities(
+                                () -> "PAGE_DIALOGS",
+                                () -> "PAGE_CHANNELS",
+                                () -> "PAGE_SETTINGS")))
+                .andExpect(status().isOk())
+                .andExpect(content().string(org.hamcrest.Matchers.containsString("data-page-key=\"settings\"")))
+                .andExpect(content().string(org.hamcrest.Matchers.not(
+                        org.hamcrest.Matchers.containsString("data-page-key=\"channels\""))));
+    }
+
+    private void stubDialogsPageData(DialogSummary summary,
+                                     List<DialogListItem> dialogs,
+                                     DialogMyDialogs myDialogs) {
+        when(dialogLookupReadService.loadSummary()).thenReturn(summary);
+        when(dialogLookupReadService.loadDialogs(anyString())).thenReturn(dialogs);
+        when(dialogLookupReadService.groupMyActiveDialogs(anyList(), anyString())).thenReturn(myDialogs);
+        when(sharedConfigService.loadSettings()).thenReturn(Map.of());
+    }
+
+    private void stubNavigationDefaults() {
+        when(permissionService.hasAuthority(any(), anyString())).thenReturn(false);
+        when(permissionService.isSuperUser(any())).thenReturn(false);
+        when(panelUserRepository.findByUsernameIgnoreCase("operator")).thenReturn(Optional.empty());
+        when(unblockRequestService.countPendingRequests()).thenReturn(0L);
+        when(panelUserPhotoService.resolveUrl(any(), anyString())).thenReturn("/avatar_default.svg");
     }
 }
